Fixed header for landscape mode on mobile devices. Fixed old bug where first greeting couldn't be selected from list

--- a/src/styles/pages/_greetings.sass
+++ b/src/styles/pages/_greetings.sass
@@ -8,3 +8,6 @@
     .table-footer
         .button
             margin-bottom: -10px
+
+    .view-greeting
+        z-index: 100
