--- a/src/styles/pages/_history-anthem.sass
+++ b/src/styles/pages/_history-anthem.sass
@@ -14,7 +14,7 @@
                 width: calc(120vh - 60px)
 
             .button-container
-                z-index: 100x
+                z-index: 100
                 display: flex
                 flex-direction: column
                 gap: 10px
